fixing encoding file URL